# ai-simtest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: example_config.json
lovable_bot_docs/: 01_bot_overview.md  02_airline_domain.md  03_hospital_domain.md  04_banking_domain.md  05_hotel_domain.md  06_safety_rules.md
scripts/: verify_setup.py
src/: __init__.py  cli.py
src/analyzers/: __init__.py  criteria_generator.py  document_analyzer.py  document_loader.py  guardrail_generator.py  test_plan_generator.py
src/api/: app.py
src/comparison/: engine.py
src/core/: approval_gate.py  approval_gate.py.broken_backup  autonomous_orchestrator.py  config.py  llm_client.py  logging.py  orchestrator.py  report_generator.py
src/exporters/: dataset_exporter.py  html_report.py
src/generators/: persona_generator.py  persona_refiner.py
src/judges/: __init__.py  grounding_judge.py  quality_judge.py  safety_judge.py
src/regression/: suite_manager.py
src/simulators/: conversation_simulator.py
tests/: conftest.py  mock_bot_server.py  test_analyzers.py  test_analyzers_p2.py  test_api.py  test_approval_gates.py  test_autonomous.py  test_core.py  test_enhancements.py  test_fixes.py  test_integration.py  test_phase10.py  test_providers.py
