[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-simtest"
version = "0.1.0"
description = "Open-source AI simulation testing platform - Test your chatbots with 100+ personas in minutes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AI SimTest Contributors" }
]
keywords = ["ai", "testing", "chatbot", "simulation", "qa", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # LLM orchestration
    "litellm>=1.30.0",
    "httpx>=0.27.0",

    # Evaluation models
    "sentence-transformers>=2.3.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "detoxify>=0.5.2",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",

    # Cache
    "redis>=5.0.0",

    # Task queue
    "celery[redis]>=5.3.0",

    # Utilities
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",

    # Data export
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
ui = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[project.scripts]
simtest = "ai_simtest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
